trash/egress/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: "processing"
  name: "processing"
  namespace: "default"
spec:
  selector:
    matchLabels:
      app: "processing"
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/userVolumeMount: '[{"name":"processing-secret", "mountPath":"/etc/istio/processing-secret", "readonly":true}, {"name":"processing-server-secret", "mountPath":"/etc/istio/processing-server-secret", "readonly":true}]'
        sidecar.istio.io/userVolume: '[{"name":"processing-secret", "secret":{"secretName":"processing-secret"}}, {"name":"processing-server-secret", "secret":{"secretName":"processing-server-secret"}}]'
      labels:
        app: "processing"
    spec:
      containers:
        - image: "processing:latest"
          imagePullPolicy: "Never"
          name: "processing"
          ports:
            - containerPort: 8080
              protocol: "TCP"
          resources:
            limits:
              cpu: "300m"
              memory: "300Mi"
            requests:
              cpu: "300m"
              memory: "300Mi"
