trash/egress/gateway-egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-egressgateway
  namespace: default
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - boot.com
      tls:
        mode: MUTUAL
        sni: boot.com
        serverCertificate: /etc/istio/processing-secret/tls.crt
        privateKey: /etc/istio/processing-secret/tls.key
        caCertificates: /etc/istio/processing-secret/ca.crt
