trash/egress/gateway-http.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-egressgateway-http
  namespace: default
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 11443
        name: http3
        protocol: TCP  #?
      hosts:
        - istio-egressgateway.istio-system.svc.cluster.local
