trash/egress/!!!-virtual-service-bootcom.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bootcom
  namespace: default
spec:
  hosts:
    - boot.com
  tls:
    - match:
        - port: 443
          sniHosts:
            - boot.com
      route:
        - destination:
            host: boot.com
            port:
              number: 443
          weight: 100
