trash/egress/destination-rule-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destinationrule-mtls-for-bootcom
spec:
  host: boot.com
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: MUTUAL
          sni: boot.com
          clientCertificate: /etc/istio/processing-secret/tls.crt
          privateKey: /etc/istio/processing-secret/tls.key
          caCertificates: /etc/istio/processing-secret/ca.crt
