trash/egress/envoyfilter-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: envoyfilter-header
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: istio-egressgateway
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY  # affect outbound traffic only
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.router"
          portNumber: 8443
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.lua
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            default_source_code:
              inline_string: |
                function envoy_on_request(request_handle)
                  request_handle:logWarn("===============")
                  request_handle:logWarn("Method: "..request_handle:headers():get(":method"))
                  request_handle:logWarn("Path: "..request_handle:headers():get(":path"))
                  print("!!!")
                  request_handle:headers():add("USER_ID1", "USER1")
                end
                
                function envoy_on_response(response_handle)
                    response_handle:headers():add("USER_ID", "USER")
                    response_handle:logWarn("<><><><><><><><><>")
                    response_handle:logWarn("Status: "..response_handle:headers():get(":status"))
                end
