trash/egress/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: bootcom
  namespace: default
spec:
  exportTo:
    - '.'
  hosts:
    - boot.com
  ports:
    - number: 443
      name: https
      protocol: HTTPS
      location: MESH_EXTERNAL
  resolution: DNS
