trash/egress/virtual-service-direct-through-egress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-bootcom-though-egress-gateway
  namespace: default
spec:
  hosts:
    - boot.com
  gateways:
    - istio-egressgateway
    - mesh
  http:
    - match:
        - gateways:
            - mesh
          port: 80
          protocol: HTTP
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            port:
              number: 11443
            protocol: HTTP
          weight: 100
    - match:
        - gateways:
            - istio-egressgateway
          port: 443
      route:
        - destination:
            host: boot.com
            port:
              number: 443
          weight: 100
